# Nano-Client

./: README.md  index.html  manifest.json  package-lock.json  package.json  release_notes.md  release_notes_v1.2.0.md
docs/: index.html  script.js  style.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: Sidebar.tsx
src/pages/: Home.tsx  Logs.tsx  Mods.tsx  Settings.tsx
src/store/: useStore.ts
