[package]
name = "nano-client"
version = "1.2.0"
description = "Nano Client — Modern Minecraft FPS Launcher"
authors = ["Nano Client"]
edition = "2021"

[lib]
name = "nano_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
once_cell = "1"
directories = "6"
anyhow = "1"
lighty-launcher = { version = "0.8", features = ["fabric", "events"] }
zip = "2.1"
tempfile = "3"
urlencoding = "2"
